# rust_dynamic_installation

./: .gitignore  Cargo.toml  Readme.md
src/: build.rs  main.rs
